tests/paczka1/fuzzy1/53032520.err
Error in line 2: 0SGV A878 79,0
Error in line 14: pTlX6FKOuvZ S280 14,1
Error in line 16: pTlX6FKOuvZ A878 11,5
Error in line 17: pTlX6FKOuvZ S280 52,6
Error in line 37: l7KQ0ZQaPhT S846 22,62
